--- a/JWTAzureAPI/appsettings.json
+++ b/JWTAzureAPI/appsettings.json
@@ -14,7 +14,7 @@
   "AllowedHosts": "*",
   "MySettings": {
     "DbConnection": "my prod db connection",
-    "Email": "my_prod@domain.com",
+    "Email": "#{emailserviceid}#",
     "SMTPPort": "5605"
   }
 
